# esp_eye_v2

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  SPEC.md  TECH_NOTES.md  sdkconfig.defaults
components/TFT_eSPI/: CMakeLists.txt  User_Setup.h
components/edge_impulse/: CMakeLists.txt  Kconfig  edge_impulse.cpp  edge_impulse.h  edge_impulse_impl.cpp
components/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
components/edge_impulse/tflite-model/: tflite_learn_905178_4_compiled.cpp  tflite_learn_905178_4_compiled.h
components/edge_impulse_events/: CMakeLists.txt  edge_impulse_events.c  edge_impulse_events.h
components/eye_ui/: CMakeLists.txt  eye_ui.cpp  eye_ui.h
components/ui_state/: CMakeLists.txt  ui_state.c  ui_state.h
main/: CMakeLists.txt  idf_component.yml  image.h  main.cpp
